--- a/sobre.html
+++ b/sobre.html
@@ -93,92 +93,46 @@
             Correspondência
         </h3>-->
 
-        <h3 class="contato_subtitulo">Correspondência</h3>
-        
-        <small> (todos os dias, das 9h às 18h) </small>
+        <div class="contato_secao">
 
-        <address class="contato_info">
-            TP Sistemas de Informática S.A
-            <br>
-            Avenida Borges de Medeiros, 1800, 9° andar
-            Centro
-            <br>
-            Porto Alegre - RS
-        </address>
+            <h3 class="contato_subtitulo">Correspondência</h3>
 
-        <!--<h3>
-            Telefones
-        </h3>-->
+            <small> (todos os dias, das 9h às 18h) </small>
 
-        <h3 class="contato_subtitulo"> Telefones</h3>
+            <address class="contato_info">
+                TP Sistemas de Informática S.A
+                <br>
+                Avenida Borges de Medeiros, 1800, 9° andar
+                Centro
+                <br>
+                Porto Alegre - RS
+            </address>
+        </div>
 
-        <small>
-            (segunda à sexta, das 9h às 18h)
-        </small>
+        <div class="contato_secao contato_secao--telefone">
 
-        <dl class="contato_info">
-            <!--<dt> Pessoa Física: </dt>
-            <dd> <a href="tel://513200-0000">(51) 3200-0000</a></dd>
-        </dl>
-        
-        <dl>
-            <dt> Pessoa Jurídica: </dt>
-            <dd> <a href="tel://513200-0001"> (51) 3200-0001</a></dd> -->
+            <h3 class="contato_subtitulo"> Telefones</h3>
 
-            <div>
-                <dt class="contato_info-titulo">Pessoa Física: </dt>
-                <dd class="contato_info-descricao"><a href="tel://513200-0000"> (51) 3200-0000 </a></dd>
-            </div>
+            <small>
+                (segunda à sexta, das 9h às 18h)
+            </small>
 
-            <div>
-                <dt class="contato_info-titulo">Pessoa Jurídica: </dt>
-                <dd class="contato_info-descricao"><a href="tel://513200-0001"> (51) 3200-0001 </a></dd>
-            </div>
-        </dl>
+            <dl class="contato_info">
+                <div>
+                    <dt class="contato_info-titulo">Pessoa Física: </dt>
+                    <dd class="contato_info-descricao"><a href="tel://513200-0000"> (51) 3200-0000 </a></dd>
+                </div>
 
-        <section class="produtos produtos--mais-vendidos">
-            <!-- O h2 representa o título desse painel-->
-            <h2 class="produtos_titulo">Produtos mais vendidos</h2>
-            <ul class="produtos_lista">
-                <!-- li representa o produto em si-->
-                <li class="produtos_produto">
-                    <figure>
-                        <img src="img/produto1.png" alt="Foto do produto 1">
-                        <figcaption>Foto do produto 1</figcaption>
-                    </figure>
-                </li>
+                <div>
+                    <dt class="contato_info-titulo">Pessoa Jurídica: </dt>
+                    <dd class="contato_info-descricao"><a href="tel://513200-0001"> (51) 3200-0001 </a></dd>
+                </div>
+            </dl>                   
+        </div>
 
-                <!-- lo representa o produto em si, mas nesse caso também temos um produto destaque-->
-                <li class="produtos__produto	produtos__produto--destaque">
-                    <figure>
-                        <img src="img/produto-destaque.png" alt="Foto do Produto em Destaque">
-                        <figcaption>Foto do produto em destaque</figcaption>
-                    </figure>
-                </li>
-
-                <li class="produtos_produto">
-                    <figure>
-                        <img src="img/produto3.png" alt="Foto do Produto 3">
-                        <figcaption>Foto do Produto 3</figcaption>
-                    </figure>
-                </li>
-            </ul>
-        </section>
-
-        <p>Um	parágrafo	que	é	block</p>
-        <p>Um	parágrafo	que	é	block</p>
-        <a>Um	link	que	é	inline</a>
-        <a>Mais	um	link	que	é	inline</a>
-     <!--Adicionamos a classe subtitulo
-        <h3 class="subtitulo">História</h3>
-        <p>Texto</p>
-
-        Adicionamos a classe subtitulo
-        <h3 class="subtitulo">Diferenciais</h3>
-        <ul>
-            <li>Diferencial 1</li>
-            <li>Diferencial 2</li>
-            <li>Diferencial 3</li>
-        </ul> -->
+        <footer class="rodape">
+            <img src="img/logo.svg" alt="Logo da musicdot" class="rodape_logo">
+            <p class="rodape_copyright"> &copy; Copyright MusicDot </p>
+        </footer>
     </body>
 </html>
