adicionado responsividade com @MEDIA.

--- a/sobre.html
+++ b/sobre.html
@@ -43,7 +43,7 @@
         <h2 id="historia" class="subtitulo">História</h2>
 
         <figure class="familia-tupfeln">
-            <img src="img/familia-tupeln.jpg" alt="Foto da familia tupfeln">
+            <img src="img/familia-tupfeln.jpg" alt="Foto da familia tupfeln">
             <figcaption>
                 Familia Tupfeln
             </figcaption>
