alteração no arquivo template sobre.html.

--- a/sobre.html
+++ b/sobre.html
@@ -6,7 +6,7 @@
             MusicDot | Sobre a empresa
         </title>
     
-        <link	href="img/favicon.ico" rel="icon">
+        <link href="img/favicon.ico" rel="icon">
         <link rel="stylesheet" href="css/sobre.css">
     </head>
 
@@ -39,7 +39,6 @@
             tiver dúvidas. Conheça também <a href="#historia"> nossa história </a> e <a href="#diferenciais"> nossos diferenciais </a>.
         </p>
 
-        <!--<h2>História</h2>-->
         <h2 id="historia" class="subtitulo">História</h2>
 
         <figure class="familia-tupfeln">
@@ -109,7 +108,7 @@
             </address>
         </div>
 
-        <div class="contato_secao contato_secao--telefone">
+        <div id="contato" class="contato_secao contato_secao--telefone">
 
             <h3 class="contato_subtitulo"> Telefones</h3>
 
