--- a/index.html
+++ b/index.html
@@ -36,16 +36,59 @@
 
         <!-- Conteúdo principal -->
         Conteúdo principal
-        <main class="flex-container">
-            <div class="foto foto-destaque-verde"></div>
-            <div class="flex-container foto-container"></div>
-            <div class="foto"></div>
-            <div class="foto"></div>
-            <div class="foto"></div>
-            <div class="foto"></div>
-            <div class="foto"></div>
-            <div class="foto"></div>
-            <div class="foto"></div>
+
+        <main>
+            <section class="cursos">
+                <article class="cursos_chamada --largura-grande">
+                    <h1 class="chamada_titulo">Cursos Online de <strong class="chamada_titulo--destaque"música></strong></h1>
+                    <p>Comece agora e aprenda sua primeira música em 10 minutos!</p>
+                    <a href="cursos.html" class="chamada_cursos_matricula botao">Matricule-se</a>
+                </article>
+
+                <nav>
+                    <ul class="cursos_lista">
+                        <li class="curso--tecladopiano">
+                            <a href="#">Teclado & Piano</a>
+                        </li>
+
+                        <li class="curso--violaguitarra">
+                            <a href="#">Violão & Guitarra</a>
+                        </li>
+
+                        <li class="curso--baixo">
+                            <a href="#">Baixo</a>
+                        </li>
+
+                        <li class="curso--bateria curso--destaque">
+                            <a href="#">Bateria</a>
+                        </li>
+
+                        <li class="curso--percursao">
+                            <a href="#">Percursao</a>
+                        </li>
+
+                        <li class="curso--canto curso--destaque2">
+                            <a href="#">Canto</a>
+                        </li>
+
+                        <li class="curso--audio">
+                            <a href="#">Áudio</a>
+                        </li>
+
+                        <li class="curso--teoria">
+                            <a href="#">Teoria</a>
+                        </li>
+
+                        <li class="curso--sopro">
+                            <a href="#">Sopro</a>
+                        </li>
+
+                        <li class="curso --cordas">
+                            <a href="#">Cordas</a>
+                        </li>
+                    </ul>
+                </nav>
+            </section>
         </main>
 
         <footer class="rodape container">
