--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
         <link rel="stylesheet" href="css/rodape.css">
         <link rel="stylesheet" href="css/form-newsletter.css">
         <link rel="stylesheet" href="css/style.css">
+        <link rel="stylesheet" href="css/video.css">
+        <link rel="stylesheet" href="css/planos.css">
+        <link rel="stylesheet" href="css/beneficios.css">
     </head>
 
     <body>
@@ -40,10 +43,11 @@
         <main>
             <section class="cursos">
                 <article class="cursos_chamada --largura-grande">
-                    <h1 class="chamada_titulo">Cursos Online de <strong class="chamada_titulo--destaque"música></strong></h1>
+                    <h1 class="chamada_titulo">Cursos Online de <strong class="chamada_titulo--destaque"> música</strong></h1>
                     <p>Comece agora e aprenda sua primeira música em 10 minutos!</p>
                     <a href="cursos.html" class="chamada_cursos_matricula botao">Matricule-se</a>
                 </article>
+                
 
                 <nav>
                     <ul class="cursos_lista">
@@ -88,6 +92,79 @@
                         </li>
                     </ul>
                 </nav>
+            </section>
+
+            <section class="video">
+                <video controls class="video--mobile" src="video/video-promocional.mp4" poster="img/video-principal-mobile.png"></video>
+                <video controls class="video--desktop" src="video/video-promocional.mp4" poster="img/video-principal.png"></video>
+
+                <article class="video_textos">
+                    <h2 class="textos_titulos">Estude com os melhores professores</h2>
+                    <p>Aprenda no seu ritmo, sem sair de casa</p>
+                </article>
+            </section>
+
+            <section class="planos">
+                <h2 class="planos_titulo">Acesso ilimitado a todos os cursos</h2>
+                <article class="cards_planoanual">
+                    <span class="plano--destaque"> + Assinado</span>
+
+                    <div class="planos_card card--anual">
+                        <h3 class="plano_titulo">Plano Anual</h3>
+                        <p>12x <span class="valor--destaque">R$ 50,00</span></p>
+                        <p>Valor total de R$ 600,00</p>
+                        <span>Acesso à Alura Língua</span>
+                        <a href="cursos.html" class="cards_botao botao">Matricule-se</a>
+                    </div>
+                </article>
+
+                <article class="planos_card card--semestral">
+                    <h3 class="plano_titulo">Plano Semestral</h3>
+                    <p>12x <span class="valor--destaque">R$ 60,00</span></p>
+                    <p>Valor total de R$ 360,00</p>
+                    <a href="cursos.html" class="cards_botao botao">Matricule-se</a>
+                </article>
+
+                <article class="planos_pagamentos">
+                    <p>Pagamento seguro com PayPal</p>
+                    <p>Oferecemos boleto à vista, <a href="#">basta entrar em contato</a></p>
+                </article>
+            </section>
+
+            <section class="beneficios">
+                <h2 class="beneficios_titulo">Porque estudar na MusicDot</h2>
+                <ul class="beneficios_lista">
+
+                    <li class="beneficio--paravoce">
+                        <h3 class="beneficio_titulo">Tudo para você realmente aprender</h3>
+                        <p class="beneficio_texto">Você acessa todo o conteúdo! São aulas, exercícios, 
+                            playbacks, cifras, partituras e tira dúvidas. Estudem em qualquer lugar, 
+                            qualquer dia, qualquer horário, ilimitado. Matricule-se já</p>
+                    </li>
+
+                    <li class="beneficio--duvidas">
+                        <h3 class="beneficio_titulo">Nenhuma dúvida sem resposta</h3>
+                        <p class="beneficio_texto">Dúvidas são importantes para o seu aprendizado, 
+                            e as dificuldades são normais. Na MusicDot você estuda com todo o suporte necessário. Além
+                            de todo conteúdo, você tira dúvida com os professores</p>
+                    </li>
+
+                    <li class="beneficio--didatica">
+                        <h3 class="beneficio_titulo">Didática cuidadosa que te faz aprender</h3>
+                        <p class="beneficio_texto">Saber tocar não quer dizer saber ensinar. Na MusicDot
+                            você encontra os dois! Nosso orgulho é justo o extremo cuidado didático que temosm com as aulas.
+                            Investimos muito tempo.
+                        </p>
+                    </li>
+
+                    <li class="beneficio--online">
+                        <h3 class="beneficio_titulo">Estudar online é a melhor opção</h3>
+                        <p class="beneficio_texto">Aprender em DVD e revistinha de banca são coisas do passado! 
+                            Estudar com um professor particular é bom, mas quem é o seu professor? AMusicDot te oferece
+                            a melhor aula, a qualquer hora.
+                        </p>
+                    </li>
+                </ul>
             </section>
         </main>
 
