alteração no arquivo index.html adicionado conteudo .

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
         <link rel="stylesheet" href="css/video.css">
         <link rel="stylesheet" href="css/planos.css">
         <link rel="stylesheet" href="css/beneficios.css">
+        <link rel="stylesheet" href="css/chamada-youtube.css">
+        <link rel="stylesheet" href="css/chamada-app.css">
     </head>
 
     <body>
@@ -165,6 +167,45 @@
                         </p>
                     </li>
                 </ul>
+            </section>
+
+            <section class="chamada_youtube">
+                <article class="chamada_youtube_canal youtube_informacao icone--youtube --largura-grande">
+                    <h2 class="canal_titulo">Nosso canal no youtube</h2>
+                    <p class="canal_texto">Cursos online de Teclado, Piano, Canto, Violão, Guitarra, 
+                        Teoria musical e mais!</p>
+                    <a href="https://www.youtube.com/user/musicdotonline" class="canal_button botao">Ver Canal</a>
+                </article>
+
+                <article class="chamada_youtube_canal chamada_youtube--video1">
+                    <a class="video_descricao" href="#">
+                        <h2 class="descricao_titulo">Aula de Canto para Iniciantes (dicas básicas)</h2>
+                        <p class="descricao_texto">Nessa aula a professora Anny Cee dá as primeiras dicas
+                            para você começar o seu estudo de canto.
+                        </p>
+                    </a>
+                </article>
+
+                <article class="chamada_youtube_canal chamada_youtube--video2">
+                    <a class="video_descricao" href="#">
+                        <h2 class="descricao_titulo">Toque teclado em 10 minutos! (Aula de 
+                            teclado para iniciantes)
+                        </h2>
+                        <p class="descricao_texto">Essa é a primeira aula do curso de teclado da MusicDot.
+                            Aqui você aprenderá a nomear todas...
+                        </p>
+                    </a>
+                </article>
+            </section>
+
+            <section class="chamada_aplicativo">
+                <h2 class="aplicativo_titulo">Estude em qualquer lugar com o App</h2>
+                <p class="aplicativo_texto">Com o aplicativo da MusicDot você baixa
+                    as aulas para estudat offiline e fazer os exercícios. Disponível para
+                    Android e ios. Já é aluno? <strong class="texto-destaque">Baixe já:</strong>
+                </p>
+                <a href="https://play.google.com/store/apps/details?id=br.com.musicdot&hl=en" class="aplicativo_button app_download--android botao">Andrioid</a>
+                <a href="https://apps.apple.com/br/app/musicdot/id1333842849" class="aplicativo_button app_download--ios botao">ios</a>
             </section>
         </main>
 
