--- a/matricula.html
+++ b/matricula.html
@@ -53,7 +53,77 @@
                         <th scope="col">Tempo</th>
                     </tr>
                 </thead>
+
+                <tbody>
+                    <tr>
+                        <td><input type="checkbox" name="curso" value="20"></td>
+                        <td>Curso de Violão</td>
+                        <td>20h</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox" name="curso" value="30"></td>
+                        <td>Curso de Bambolê</td>
+                        <td>30h</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox" name="curso" value="12"></td>
+                        <td>Curso de Java</td>
+                        <td>12h</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox" name="curso" value="20"></td>
+                        <td>Curso de Violão</td>
+                        <td>20h</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox" name="curso" value="30"></td>
+                        <td>Curso de Bambolê</td>
+                        <td>30h</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox" name="curso" value="12"></td>
+                        <td>Curso de Java</td>
+                        <td>12h</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox" name="curso" value="20"></td>
+                        <td>Curso de Violão</td>
+                        <td>20h</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox" name="curso" value="30"></td>
+                        <td>Curso de Bambolê</td>
+                        <td>30h</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox" name="curso" value="12"></td>
+                        <td>Curso de Java</td>
+                        <td>12h</td>
+                    </tr>
+                     <tr>
+                        <td><input type="checkbox" name="curso" value="20"></td>
+                        <td>Curso de Violão</td>
+                        <td>20h</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox" name="curso" value="30"></td>
+                        <td>Curso de Bambolê</td>
+                        <td>30h</td>
+                    </tr>
+                    <tr>
+                        <td><input type="checkbox" name="curso" value="12"></td>
+                        <td>Curso de Java</td>
+                        <td>12h</td>
+                    </tr>
+
+                    <tr class="bg-dark text-light">
+                        <td>Total</td>
+                        <td class="js-total-de-cursos">0 curso(s)</td>
+                        <td class="js-total-de-horas">0h</td>
+                    </tr>
+                </tbody>
             </table>
+            <button type="button" class="btn btn-online-dark btn-lg mb-4">Confirmar Matrrícula</button>
         </main>
 
         <script src="js/jquery.js"></script>
