aletração no layout da página index.html.

--- a/index.html
+++ b/index.html
@@ -17,6 +17,8 @@
         <link rel="stylesheet" href="css/beneficios.css">
         <link rel="stylesheet" href="css/chamada-youtube.css">
         <link rel="stylesheet" href="css/chamada-app.css">
+        <link rel="stylesheet" href="css/cursos.css">
+        <link rel="stylesheet" href="css/container.css">
     </head>
 
     <body>
@@ -40,7 +42,6 @@
         </header>
 
         <!-- Conteúdo principal -->
-        Conteúdo principal
 
         <main>
             <section class="cursos">
@@ -213,7 +214,7 @@
              
             <!-- Conteúdo do footer -->
             <section class="rodape_secao rodape_secao--sobre">
-                <img class="rodape_logo" src="img/logo.svg" alt="Logo da MuciDot">
+                <img class="rodape_logo" src="img/logo.svg" alt="Logo da MusicDot">
                 <p class="rodape_infos-empresa">
                     TP Sistemas de Informática S.A
                     <br>
